--- a/templates/query.html
+++ b/templates/query.html
@@ -130,15 +130,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2 logo">
-        <a href="<%= rootPath() %>"><img src="<%= rootPath() %>assets/images/c2net-logo.jpg" alt=""></a>
+        <a href="<%= rootPath() %>"><img src="<%= rootPath() %>assets/images/c2net-logo.svg" alt=""></a>
       </div>
       <div class="col-md-9 col-sm-9 col-xs-10 titles">
-        <h1><%= t("welcome_greeting") %> [v0.10.1]</h1>
-        <h2>
-          <a href="https://github.com/gobuffalo/buffalo"><i class="fa fa-github" aria-hidden="true"></i> https://github.com/gobuffalo/buffalo</a>
-        </h2>
+        <h1>Welcome to C2NeT form filler</h1>
         <h2 class="documentation">
-          <a href="http://gobuffalo.io/"><i class="fa fa-book" aria-hidden="true"></i> Documentation</a>
+          <a href="http://c2net-project.eu/"><i class="fa fa-book" aria-hidden="true"></i> Documentation</a>
         </h2>
       </div>
     </div>
@@ -150,33 +147,18 @@
   <div class="col-md-12">
     <div class="subtitle">
       <div class="container">
-        <h3>Defined Routes</h3>
+        <h3>Some title for form</h3>
       </div>
     </div>
     <div class="table-responsive">
       <table class="table table-striped">
-        <thead>
-          <tr text-align="left">
-            <th class="centered">METHOD</th>
-            <th>PATH</th>
-            <th>NAME</th>
-            <th>HANDLER</th>
-          </tr>
-        </thead>
         <tbody>
 
-          <%= for (r) in routes { %>
+          <%= for (v) in values { %>
             <tr>
               <td class="centered">
-                <%= r.Method %>
+                <%= v %>
               </td>
-              <td>
-                <%= r.Path %>
-              </td>
-              <td>
-                <%= r.PathName %>
-              </td>
-              <td><code><%= r.HandlerName %></code></td>
             </tr>
           <% } %>
 
@@ -185,4 +167,4 @@
     </div>
   </div>
 </div>
-<div class="foot"> <span> Powered by <a href="http://gobuffalo.io/">gobuffalo.io</a></span> </div>
+<div class="foot"> <span> Powered by <a href="http://gris.uninova.pt">GRIS/UNINOVA</a></span> </div>
