--- a/templates/query.html
+++ b/templates/query.html
@@ -150,21 +150,20 @@
         <h3>Some title for form</h3>
       </div>
     </div>
-    <div class="table-responsive">
-      <table class="table table-striped">
-        <tbody>
+      
+      <form>
+      <%= for (k,v) in values { %>
+  <div class="form-group row">
 
-          <%= for (v) in values { %>
-            <tr>
-              <td class="centered">
-                <%= v %>
-              </td>
-            </tr>
-          <% } %>
-
-        </tbody>
-      </table>
+      <label for="staticEmail" class="col-sm-2 col-form-label"><%= k %></label>
+    <div class="col-sm-10">
+	    <input type="text" readonly class="form-control-plaintext" id="staticEmail" value=<%= v %>>
     </div>
+  </div>
+  <% } %>
+
+      </form>
+      <button type="button" class="btn btn-primary">Primary</button>
   </div>
 </div>
 <div class="foot"> <span> Powered by <a href="http://gris.uninova.pt">GRIS/UNINOVA</a></span> </div>
